Addeding fixes for multiple scrollbar problem on windows, linked correct color-swatch with the body background.

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1046,9 +1046,8 @@ hr.line {
 }
 /* Scrollbars */
 
-body, html {
+body {
 	-ms-overflow-style: none;
-	overflow: none;
 }
 
 ::-webkit-scrollbar {
